# cdktf-bugreport

./: .dockerignore  Pipfile  docker-compose.yml  pyproject.toml
cdktf/: cdktf.json  help  main.py
docker/: Dockerfile
