[tool.poetry]
name = "cdktf"
version = "0.0.1"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

cdktf="~0.20.8"
pytest="~8.3.2"
cdktf-cdktf-provider-aws="~19.30.0"
#python-dotenv="~1.0.1"

[tool.poetry.dev-dependencies]
# Normal PyPi dependencies
#pre-commit = "~3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
